--- a/assets/repo/repo.conf
+++ b/assets/repo/repo.conf
@@ -1,14 +1,14 @@
 APT {
 FTPArchive {
 Release {
-Origin "khanhduytran0's repo";
-Label "khanhduytran0's repo";
+Origin "nizira1n's official repo";
+Label "nizira1n's official repo";
 Suite stable;
 Version 1.0;
 Codename CODENAME_HERE;
 Architectures iphoneos-arm64;iphoneos-arm;
 Components main;
-Description "khanhduytran0's personal jailbreak repo";
+Description "The official nizira1n repo";
 };
 };
 };
